--- a/Source Code/ContactUs.html
+++ b/Source Code/ContactUs.html
@@ -41,14 +41,13 @@
 
     <div class="container" style=" background-color: lavender;">
     
-        <div class="col-md-5 col-md-offset-1" style="border:none;">
-          <h3 style="font-weight: 700 ;color: black;">PETBot COMPANY - Contact Us</h3> <br>
-          <p style="color: #555;"> We believe in good old fashioned service provided by real people. Contact PETBot Company and speak to our friendly and knowledgeable staff who can discuss your plastic packaging or custom moulding requirements.</p>
-          <br>
-          <p style="color: #555;">
-            <strong>PETBot COMPANY address.</strong><br>
-              590 Cach Mang Thang Tam street, ward 11, district 3, Hồ Chí Minh city <br>
-          </p>
+        <div class="col-md-5 col-md-offset-1" style="border:none; text-align:justify">
+          <h3 style="font-weight: 700 ;color: black;">PETBot COMPANY - Contact Us</h3>
+          <span style="color: #555; font-size:13pt"> We believe in good old fashioned service provided by real people. Contact PETBot Company and speak to our friendly and knowledgeable staff who can discuss your plastic packaging or custom moulding requirements.</span>
+          <div style="color: #555;font-size:13pt">
+            <span style="font-size:13pt; font-weight:bold"><u>PetBot Company address:</u></span><br>
+              590 Cach Mang Thang Tam street, ward 11, district 3, Hồ Chí Minh city
+          </div>
           <br>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.319350036688!2d106.66408561406833!3d10.786834792314465!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752ed2392c44df%3A0xd2ecb62e0d050fe9!2sFPT-Aptech%20Computer%20Education%20HCM!5e0!3m2!1svi!2s!4v1606897727108!5m2!1svi!2s" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </div>
@@ -196,7 +195,7 @@
 
     </script>
        
-       <marquee class="footer" style="clear:both; font-size:15pt"> 
+       <marquee behavior='alternate' scrollamount='5' onmouseover='this.stop()' onmouseout='this.start()'class="footer" style="clear:both; font-size:15pt"> 
         <span style="text-align:center; float:left;color: darkmagenta; width: 20%"><i class="fas fa-phone-alt"></i> 028.999.999</span>
         <span style="text-align:center; float:left;color: darkmagenta; width: 30%"><i class="far fa-envelope"></i> Nhutlchts2009030@fpt.edu.vn</span>
         <span style="text-align:center; float:left;color: darkmagenta; width: 50%"><i class="fas fa-copyright"></i> The PETBot Company Copyright. All right reserved Privacy Statement</span>
