--- a/Source Code/Pharma.html
+++ b/Source Code/Pharma.html
@@ -118,7 +118,7 @@
           </div>
     </div>
     
-    <marquee class="footer" style="clear:both; font-size:15pt"> 
+    <marquee behavior='alternate' scrollamount='5' onmouseover='this.stop()' onmouseout='this.start()' class="footer" style="clear:both; font-size:15pt"> 
       <span style="text-align:center; float:left;color: darkmagenta; width: 20%"><i class="fas fa-phone-alt"></i> 028.999.999</span>
       <span style="text-align:center; float:left;color: darkmagenta; width: 30%"><i class="far fa-envelope"></i> Nhutlchts2009030@fpt.edu.vn</span>
       <span style="text-align:center; float:left;color: darkmagenta; width: 50%"><i class="fas fa-copyright"></i> The PETBot Company Copyright. All right reserved Privacy Statement</span>
