--- a/Source Code/Product.html
+++ b/Source Code/Product.html
@@ -77,7 +77,7 @@
               <div class="bottom"> Healthcare bottle </div>
             </div>
             <div class="columnP">
-              <a href="Healthcare_jars.html"><img src="Image/healthcare jars.png"  style="width:150px; height:150px;display:block;margin:auto"></a>
+              <a href="Healthcare_jars.html"><img src="Image/beautifull.jpg"  style="width:150px; height:150px;display:block;margin:auto"></a>
               <div class="bottom"> Healthcare jars </div>
             </div>
             <div class="columnP">
@@ -107,7 +107,7 @@
     
 
           
-    <marquee class="footer" style="clear:both; font-size:15pt"> 
+    <marquee behavior='alternate' scrollamount='5' onmouseover='this.stop()' onmouseout='this.start()' class="footer" style="clear:both; font-size:15pt"> 
       <span style="text-align:center; float:left;color: darkmagenta; width: 20%"><i class="fas fa-phone-alt"></i> 028.999.999</span>
       <span style="text-align:center; float:left;color: darkmagenta; width: 30%"><i class="far fa-envelope"></i> Nhutlchts2009030@fpt.edu.vn</span>
       <span style="text-align:center; float:left;color: darkmagenta; width: 50%"><i class="fas fa-copyright"></i> The PETBot Company Copyright. All right reserved Privacy Statement</span>
